# qinkit

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  logs.rs  main.rs  process_manager.rs  types.rs  window_ops.rs
src/components/: ActionPanel.tsx  Icon.tsx  LogModal.tsx  ServiceEditorModal.tsx  ServiceList.tsx  Titlebar.tsx
src/utils/: service.ts
