[package]
name = "lite-service-manager"
version = "0.1.0"
description = "A lightweight Windows command service manager built with Tauri, Rust and React."
authors = ["makabaka"]
edition = "2021"

[lib]
name = "lite_service_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
